[package]
name = "my_solana_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
solana-program = "1.10.17"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
thiserror = "~1.0"
borsh = "~0.9.2"
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]